--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color: #55B;
+    font-family: Cambria, Cochin, Helvetica, Times, 'Times New Roman', serif;
+}
+
+.top-container{
+    text-align: center;
+}
+
+.grid-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+   
+}
+
+.grid-container > div{
+    border: 2px solid black;
+    border-radius: 25px;
+    flex-basis: 300px;
+    margin-bottom: 20px;
+    height: 200px;
+    text-align: center;
+    font-size: 15px;
+    background-color: black;
+
+}
+
+.grid-container > div > img{
+    border-radius: 25px 25px 0 0;
+    width: 100%;
+    height: 70%;
+   
+}
+
+.grid-container > div > p{
+    color:white;
+}
+
+input{
+    border: 0;
+    border-bottom: 3px solid rgb(6, 6, 51);
+    width: 200px;
+    outline: none;
+    background-color: #55B;
+    transition: .2s all;
+}
+
+input:focus{
+    border: 2px solid rgb(18, 18, 136);
+    background-image: linear-gradient(gray, white );
+}
+
+
+button{
+    color: white;
+    background-color: green;
+    border-radius: 15%;
+    border: none;
+    margin-left: 10px;
+    font-size: 20px;
+    pointer-events: fill;
+    transition: .2s all;
+}
+
+button:hover{
+    background-color: rgb(3, 104, 3);
+    color: rgb(224, 217, 217);
+}
+
+hr{
+    color: black;
+    width: 100%;
 }
